fdo#86857: sw: fix HTML export of page style background color

SwPageDesc no longer contains RES_BACKGROUND but XATTR_FOO.

Change-Id: Ie722b0279f9d9831338f6613a4722010afd1543e